# ip-api-server

./: .env.sample  .gitignore  Cargo.toml
src/: config.rs  main.rs  models.rs
