[package]
name = "ip-api-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.0"
ipapi = "0.1.0"
tokio = { version = "1.0", features = ["full"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11.11"
log = "0.4"
chrono = "0.4"